@@ -4,6 +4,11 @@ Change log
 1.0 (unreleased)
 ----------------
 
+- Changed the way internal logging is done to avoid storing logger
+  objects onto the connection instance unless it is explicitly
+  specified. This means the instance is picklable when using the 
+  default logging.
+
 - Removed the `bind` method. There was no good reason to expose it 
   as part of the public API, and since bind operations are 
   re-done as part of all operations it would only serve to 
